crates/vize_patina/tests/snapshots/lint_history__ref-call-control.snap
---
source: crates/vize_patina/tests/lint_history.rs
expression: first_bytes
---
Case {
    id: "ref-call-control",
    history: "cba6fd5bbb7519696059416fd77aa1ba3192cba3",
    source: "<script setup lang=\"ts\">\nimport { ref } from \"vue\"\nconst text = ref<HTMLInputElement | null>(null)\n</script>\n<template><div ref=\"text\" /></template>\n",
    filename: "History.vue",
    entry: "sfc",
    rule: "script/prefer-use-template-ref",
    vue_version: None,
    vapor: None,
    diagnostics: 1,
    fixes: 0,
}
Observation {
    initial: LintResult {
        filename: "History.vue",
        diagnostics: [
            LintDiagnostic {
                rule_name: "script/prefer-use-template-ref",
                severity: Warning,
                message: "Template ref 'text' is declared with ref(); use useTemplateRef() instead (Vue 3.5+).",
                start: 64,
                end: 98,
                help: Some(
                    "Replace with: `const text = useTemplateRef('text')`",
                ),
                labels: [
                    Label {
                        message: "declared as a template ref",
                        start: 64,
                        end: 98,
                    },
                ],
                fix: None,
            },
        ],
        error_count: 0,
        warning_count: 1,
    },
    applications: [],
    unchanged_requery: Some(
        LintResult {
            filename: "History.vue",
            diagnostics: [
                LintDiagnostic {
                    rule_name: "script/prefer-use-template-ref",
                    severity: Warning,
                    message: "Template ref 'text' is declared with ref(); use useTemplateRef() instead (Vue 3.5+).",
                    start: 64,
                    end: 98,
                    help: Some(
                        "Replace with: `const text = useTemplateRef('text')`",
                    ),
                    labels: [
                        Label {
                            message: "declared as a template ref",
                            start: 64,
                            end: 98,
                        },
                    ],
                    fix: None,
                },
            ],
            error_count: 0,
            warning_count: 1,
        },
    ),
}
