crates/vize_patina/tests/snapshots/lint_history__shorthand-compat-vue2.snap
---
source: crates/vize_patina/tests/lint_history.rs
expression: first_bytes
---
Case {
    id: "shorthand-compat-vue2",
    history: "f9fa82f7867e3a9373a8d0ee30162c6947c7c113",
    source: "<template><MyComponent :foo=\"foo\" /></template>",
    filename: "History.vue",
    entry: "sfc",
    rule: "vue/prefer-props-shorthand",
    vue_version: Some(
        "2",
    ),
    vapor: None,
    diagnostics: 0,
    fixes: 0,
}
Observation {
    initial: LintResult {
        filename: "History.vue",
        diagnostics: [],
        error_count: 0,
        warning_count: 0,
    },
    applications: [],
    unchanged_requery: Some(
        LintResult {
            filename: "History.vue",
            diagnostics: [],
            error_count: 0,
            warning_count: 0,
        },
    ),
}
