crates/vize_patina/tests/snapshots/lint_history__shorthand-compat-vue3.snap
---
source: crates/vize_patina/tests/lint_history.rs
expression: first_bytes
---
Case {
    id: "shorthand-compat-vue3",
    history: "f9fa82f7867e3a9373a8d0ee30162c6947c7c113",
    source: "<template><MyComponent :foo=\"foo\" /></template>",
    filename: "History.vue",
    entry: "sfc",
    rule: "vue/prefer-props-shorthand",
    vue_version: Some(
        "3",
    ),
    vapor: None,
    diagnostics: 1,
    fixes: 1,
}
Observation {
    initial: LintResult {
        filename: "History.vue",
        diagnostics: [
            LintDiagnostic {
                rule_name: "vue/prefer-props-shorthand",
                severity: Warning,
                message: "Use shorthand syntax for same-name prop binding",
                start: 23,
                end: 33,
                help: Some(
                    "Use shorthand prop syntax",
                ),
                labels: [],
                fix: Some(
                    Fix {
                        message: "Use shorthand prop syntax",
                        edits: [
                            TextEdit {
                                start: 27,
                                end: 33,
                                new_text: "",
                            },
                        ],
                    },
                ),
            },
        ],
        error_count: 0,
        warning_count: 1,
    },
    applications: [
        Application {
            diagnostic_index: 0,
            source: "<template><MyComponent :foo /></template>",
            result: LintResult {
                filename: "History.vue",
                diagnostics: [],
                error_count: 0,
                warning_count: 0,
            },
        },
    ],
    unchanged_requery: None,
}
