crates/vize_patina/tests/snapshots/lint_history__static-class-empty-expression.snap
---
source: crates/vize_patina/tests/lint_history.rs
expression: first_bytes
---
Case {
    id: "static-class-empty-expression",
    history: "634f636969b451c805ad4874c0567d64c8e8f850",
    source: "<div :class=\"\"></div>",
    filename: "History.vue",
    entry: "template",
    rule: "vapor/prefer-static-class",
    vue_version: None,
    vapor: None,
    diagnostics: 0,
    fixes: 0,
}
Observation {
    initial: LintResult {
        filename: "History.vue",
        diagnostics: [],
        error_count: 0,
        warning_count: 0,
    },
    applications: [],
    unchanged_requery: Some(
        LintResult {
            filename: "History.vue",
            diagnostics: [],
            error_count: 0,
            warning_count: 0,
        },
    ),
}
