crates/vize_patina/tests/snapshots/lint_history__static-class-utf8-fix-control.snap
---
source: crates/vize_patina/tests/lint_history.rs
expression: first_bytes
---
Case {
    id: "static-class-utf8-fix-control",
    history: "634f636969b451c805ad4874c0567d64c8e8f850",
    source: "<template>\r\n<p>雪🌸</p><div :class=\"'static-class'\"></div>\r\n</template>\r\n",
    filename: "History.vue",
    entry: "sfc",
    rule: "vapor/prefer-static-class",
    vue_version: None,
    vapor: None,
    diagnostics: 1,
    fixes: 1,
}
Observation {
    initial: LintResult {
        filename: "History.vue",
        diagnostics: [
            LintDiagnostic {
                rule_name: "vapor/prefer-static-class",
                severity: Warning,
                message: "Prefer static class attribute over dynamic :class binding for constant values",
                start: 32,
                end: 54,
                help: None,
                labels: [],
                fix: Some(
                    Fix {
                        message: "Replace with static class attribute",
                        edits: [
                            TextEdit {
                                start: 31,
                                end: 55,
                                new_text: "class=\"static-class\"",
                            },
                        ],
                    },
                ),
            },
        ],
        error_count: 0,
        warning_count: 1,
    },
    applications: [
        Application {
            diagnostic_index: 0,
            source: "<template>\r\n<p>雪🌸</p><div class=\"static-class\"</div>\r\n</template>\r\n",
            result: LintResult {
                filename: "History.vue",
                diagnostics: [
                    LintDiagnostic {
                        rule_name: "parser/template",
                        severity: Error,
                        message: "Missing whitespace between attributes; inferred a new attribute boundary.",
                        start: 51,
                        end: 52,
                        help: None,
                        labels: [],
                        fix: None,
                    },
                    LintDiagnostic {
                        rule_name: "parser/template",
                        severity: Error,
                        message: "Unexpected solidus in tag.",
                        start: 52,
                        end: 53,
                        help: None,
                        labels: [],
                        fix: None,
                    },
                    LintDiagnostic {
                        rule_name: "parser/template",
                        severity: Error,
                        message: "Element is missing end tag.",
                        start: 26,
                        end: 57,
                        help: None,
                        labels: [],
                        fix: None,
                    },
                ],
                error_count: 3,
                warning_count: 0,
            },
        },
    ],
    unchanged_requery: None,
}
