crates/vize_patina/tests/snapshots/lint_history__v-for-no-separator.snap
---
source: crates/vize_patina/tests/lint_history.rs
expression: first_bytes
---
Case {
    id: "v-for-no-separator",
    history: "731cce813a41207950923d89099ac2c87047c0b6",
    source: "<div v-for=\"items\"></div>",
    filename: "History.vue",
    entry: "template",
    rule: "vue/valid-v-for",
    vue_version: None,
    vapor: None,
    diagnostics: 1,
    fixes: 0,
}
Observation {
    initial: LintResult {
        filename: "History.vue",
        diagnostics: [
            LintDiagnostic {
                rule_name: "vue/valid-v-for",
                severity: Error,
                message: "v-for has invalid syntax: expected 'item in items' or '(item, index) in items'",
                start: 5,
                end: 18,
                help: Some(
                    "**Valid v-for syntax:**\n```vue\n<!-- Array iteration -->\n<li v-for=\"item in items\">{{ item }}</li>\n<li v-for=\"(item, index) in items\">{{ index }}: {{ item }}</li>\n\n<!-- Object iteration -->\n<li v-for=\"(value, key) in object\">{{ key }}: {{ value }}</li>\n<li v-for=\"(value, key, index) in object\">{{ index }}</li>\n\n<!-- Range -->\n<span v-for=\"n in 10\">{{ n }}</span>\n```",
                ),
                labels: [],
                fix: None,
            },
        ],
        error_count: 1,
        warning_count: 0,
    },
    applications: [],
    unchanged_requery: Some(
        LintResult {
            filename: "History.vue",
            diagnostics: [
                LintDiagnostic {
                    rule_name: "vue/valid-v-for",
                    severity: Error,
                    message: "v-for has invalid syntax: expected 'item in items' or '(item, index) in items'",
                    start: 5,
                    end: 18,
                    help: Some(
                        "**Valid v-for syntax:**\n```vue\n<!-- Array iteration -->\n<li v-for=\"item in items\">{{ item }}</li>\n<li v-for=\"(item, index) in items\">{{ index }}: {{ item }}</li>\n\n<!-- Object iteration -->\n<li v-for=\"(value, key) in object\">{{ key }}: {{ value }}</li>\n<li v-for=\"(value, key, index) in object\">{{ index }}</li>\n\n<!-- Range -->\n<span v-for=\"n in 10\">{{ n }}</span>\n```",
                    ),
                    labels: [],
                    fix: None,
                },
            ],
            error_count: 1,
            warning_count: 0,
        },
    ),
}
