crates/vize_patina/tests/snapshots/lint_history__v-for-separator-control.snap
---
source: crates/vize_patina/tests/lint_history.rs
expression: first_bytes
---
Case {
    id: "v-for-separator-control",
    history: "731cce813a41207950923d89099ac2c87047c0b6",
    source: "<div v-for=\"item in items\" :key=\"item.id\"></div>",
    filename: "History.vue",
    entry: "template",
    rule: "vue/valid-v-for",
    vue_version: None,
    vapor: None,
    diagnostics: 0,
    fixes: 0,
}
Observation {
    initial: LintResult {
        filename: "History.vue",
        diagnostics: [],
        error_count: 0,
        warning_count: 0,
    },
    applications: [],
    unchanged_requery: Some(
        LintResult {
            filename: "History.vue",
            diagnostics: [],
            error_count: 0,
            warning_count: 0,
        },
    ),
}
